--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 	<h1>Odin Recipes</h1>
 
 	<ul>
-		<li><a href="recipes/recipename.html"></a>Reciple Title</li>
+	<li><a href="recipes/lasagna.html">Receita de Lasanha</a></li>
+	<li><a href="recipes/bolochocolate.html">Receita de Bolo de Chocolate</a></li>
 	</ul>
+
 
 </body>
 </html>
